@@ -42,6 +42,7 @@ Package org.springframework.osgi.web
 * improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
 * fixed problem with OsgiBundleXmlWebApplicationContext publishing null namespaces as OSGi properties
 * DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header
+* introduced configuration property to web extender that allows deployed wars to be undeployed during shutdown
 
 
 Changes in version 1.1.0 M2 (2008-04-29)
